# sa-pap

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  README.org  find-best  makefile  taskfile.yml
.github/workflows/: release.yml  test.yml
docs/: build-paper.el  constraint-approach.md  event-appraoch.md  main.bib  main.md  makefile  milp-approach.md  milp-approach.org
docs/eq/: constraints.org
docs/img/: find-free.org
docs/tab/: variables.org
docs/uml/: charge_solution.puml  general_yaml.puml  makefile  route_generation.puml
src/: fileio.rs  lib.rs  lp.rs  main.rs  plotter.rs  route_generator.rs  sa.rs  util.rs
src/config/: general.yaml  routes.csv  schedule-test.yaml  schedule.yaml
src/lp/: constraints.rs  objectives.rs
src/plotter/: accumulated_energy_usage_plot.rs  charge_plot.rs  charger_usage_plot.rs  power_usage_plot.rs  schedule_plot.rs  score_plot.rs
src/route_generator/: bus.rs  route_event.rs
src/sa/: charger.rs  data.rs  generators.rs  route.rs  temp_func.rs
src/util/: array_util.rs  bool_util.rs  data_output.rs  fileio.rs  rand_utils.rs  traits.rs  (+1 more)
tests/: route_csv_generator.rs  route_generator.rs  route_rand_generator.rs  test_charger.rs  test_constraints.rs  test_fileio.rs  test_generators.rs  test_lp.rs  test_primitive_generators.rs  test_route_csv_generator.rs  test_route_rand_generator.rs  test_sa.rs  test_temp_func.rs  test_tweak_schedule.rs  test_util.rs  util.rs
uml/: charge_tweak.puml  general_yaml.puml  program_overview.puml  program_overview.utxt  schedule_generation.puml  schedule_yaml.puml
(+41 files in other folders)
