[package]
name    = "sa_pap"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono    = "0.4"
csv       = "1.1"
gnuplot   = "0.0.39"
indicatif = {version = "*", features = ["rayon"]}
iter_tools= "0.1.3"
num       = "0.4.1"
rand      = "0.8.4"
strum     = { version = "0.25", features = ["derive"] }
yaml-rust = "0.4"
